[package]
name = "bitcask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
arbitrary = { version = "1.3.2", optional = true, features = ["derive"] }
bincode = "1.3.3"
crc = "3.0.1"
rustyline = "13.0.0"
serde = { version = "1.0.195", features = ["derive"] }
