[package]
name = "bitcask-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys ={ version =  "0.4", features = ["arbitrary-derive"] }
bitcask = { path = "..", features = ["arbitrary"] }

[[bin]]
name = "fuzz_target_1"
path = "fuzz_targets/fuzz_target_1.rs"
test = false
doc = false
bench = false
